
- Added support for creating refined meshes for all element types (e.g. by
  splitting high-order elements into low-order refined elements), including
  mixed meshes. The LOR Transfer miniapp (miniapps/tools/lor-transfer.cpp) now
  supports meshes with any element geometry.

- Testing improvements:
  * Transitioned from Travis to GitHub Action for testing/CI on GitHub.
  * Use Spack (and Uberenv) to automate TPL building in LLNL GitLab tests.
  * Added a set of suggested git hooks for developers in config/githooks.

- Added new miniapps demonstrating: 1) the use of GSLIB for overlapping grids,
  see gslib/schwarz_ex1, and 2) coupling different physics in different domains,
  see navier/cht. Note that gslib v1.0.7 is require (see INSTALL for details).

- Added a new, very simple example (ex0 and parallel version ex0p). This
  example solves a simple Poisson problem using H1 elements (the same problem as
  ex1), but is intended to be extremely simple and approachable for new users.

- Meshes consisting of any type of elements (including mixed meshes) can be
  converted to all-simplex meshes using Mesh::MakeSimplicial.

- Several of the mesh constructors (creating Cartesian meshes, refined (LOR)
  meshes, simplex meshes, etc.) are now available as "named constructors", e.g.
  Mesh::MakeCartesian2D or Mesh::MakeRefined. The legacy constructors are marked
  as deprecated.

- Added support for creating periodic meshes with Mesh::MakePeriodic. The
  requisite periodic vertex mappings can be created with
  Mesh::CreatePeriodicVertexMapping.

- Added support for transferring dual fields between high-order and low-order
  refined finite element spaces using the transposed versions of the
  L2ProjectionGridTransfer operators. This functionality is illustrated in the
  lor-transfer miniapp.

- Improved interface for using the Ginkgo library, including: support for matrix-
  free operators in Ginkgo solvers, new wrappers for Ginkgo preconditioners, HIP